--- a/Backend/.env
+++ b/Backend/.env
@@ -3,4 +3,4 @@ DB_USERNAME=uunenyjy7npqyair
 DB_PASSWORD=l9XpBUFrHqGdqD5eoeRY
 DB_NAME=beudmixugyf5czadnunz
 PORT=8085
-JWT_SECRET=JWT_SECRET
+JWT_SECRET=your_jwt_secret
