--- a/Backend/.env
+++ b/Backend/.env
@@ -4,3 +4,5 @@ DB_PASSWORD=l9XpBUFrHqGdqD5eoeRY
 DB_NAME=beudmixugyf5czadnunz
 PORT=8085
 JWT_SECRET=your_jwt_secret
+secretKey=6Lfb8o8qAAAAAD7A6bR27MHNrek3Nyf_IRBbN4pw
+sitekey=6Lfb8o8qAAAAAJsQIMu76uQX_gsFb-fWRNj3Ghaj
