--- a/Backend/package.json
+++ b/Backend/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^9.0.2",
     "mssql": "^11.0.1",
     "mysql2": "^3.11.3",
+    "node-fetch": "^3.3.2",
     "nodemon": "^3.1.7"
   }
 }
